--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -1,16 +1,10 @@
 [package]
-name = "rocketjson_macro"
+name = "rocketjson_data"
 version = "1.0.0"
 authors = ["Nis5l <kirchler123@gmail.com>"]
 edition = "2018"
 
-[lib]
-proc-macro = true
-
 [dependencies]
-quote = "0.6.10"
-syn = "0.15.23"
+validator = "0.14"
 rocket = { version = "0.5.0-rc.1", features = ["json"] }
-validator = { version = "0.12", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
-rocketjson_data = { version = "1.0.0", path = "../data" }
