--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocketjson"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["Nis5l <kirchler123@gmail.com>"]
 edition = "2018"
 documentation = "https://docs.rs/rocketjson"
@@ -8,8 +8,9 @@ repository = "https://github.com/Nis5l/rocketjson"
 license = "MIT OR Apache-2.0"
 keywords = ["rocket", "json", "web", "server", "api"]
 description = "Crate for working with Json and Rocket"
+readme = "../README.md"
 
 [dependencies]
-rocketjson_macro = { version = "1.0.0", path = "../macro" }
-rocketjson_data = { version = "1.0.0", path = "../data" }
+rocketjson_macro = { version = "1.0.1", path = "../macro" }
+rocketjson_data = { version = "1.0.3", path = "../data" }
 validator = "0.14"
