--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocketjson_data"
-version = "1.0.0"
+version = "1.0.3"
 authors = ["Nis5l <kirchler123@gmail.com>"]
 edition = "2018"
 documentation = "https://docs.rs/rocketjson"
@@ -8,6 +8,7 @@ repository = "https://github.com/Nis5l/rocketjson"
 license = "MIT OR Apache-2.0"
 keywords = ["rocket", "json", "web", "server", "api"]
 description = "Crate for working with Json and Rocket"
+readme = "../README.md"
 
 [dependencies]
 validator = "0.14"
