--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -15,7 +15,7 @@ proc-macro = true
 
 [dependencies]
 quote = "0.6.10"
-syn = "0.15.23"
+syn = {version = "0.15.44", features=["full"] }
 rocket = { version = "0.5.0-rc.1", features = ["json"] }
 validator = { version = "0.12", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
