--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocketjson_data"
-version = "1.1.1"
+version = "1.1.2"
 authors = ["Nis5l <kirchler123@gmail.com>"]
 edition = "2018"
 documentation = "https://docs.rs/rocketjson"
@@ -16,3 +16,4 @@ rocket = { version = "0.5.0-rc.1", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 syn = "0.15.23"
 diesel = "1.4.4"
+sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "mysql" ] }
