--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -12,7 +12,8 @@ readme = "../README.md"
 
 [dependencies]
 validator = "0.14"
-rocket = { version = "0.5.0-rc.2", features = ["json"] }
+#rocket = { version = "0.5.0-rc.2", features = ["json"] }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 syn = "0.15.23"
 anyhow = "1.0.51"
