--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -16,7 +16,8 @@ proc-macro = true
 [dependencies]
 quote = "0.6.10"
 syn = {version = "0.15.44", features=["full"] }
-rocket = { version = "0.5.0-rc.2", features = ["json"] }
+#rocket = { version = "0.5.0-rc.2", features = ["json"] }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["json"] }
 validator = { version = "0.12", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 rocketjson_data = { version = "1.2.0", path = "../data" }
