--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocketjson_data"
-version = "1.2.1"
+version = "1.3.0"
 authors = ["Nis5l <kirchler123@gmail.com>"]
 edition = "2018"
 documentation = "https://docs.rs/rocketjson"
@@ -12,7 +12,7 @@ readme = "../README.md"
 
 [dependencies]
 validator = "0.14"
-rocket = { version = "0.5.0-rc.2", features = ["json"] }
+rocket = { version = "0.5.1", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 syn = "0.15.23"
 anyhow = "1.0.51"
