--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocketjson_macro"
-version = "1.3.3"
+version = "2.0.0"
 authors = ["Nis5l <kirchler123@gmail.com>"]
 edition = "2018"
 documentation = "https://docs.rs/rocketjson"
@@ -19,4 +19,5 @@ syn = {version = "2.0.108", features=["full"] }
 rocket = { version = "0.5.1", features = ["json"] }
 validator = { version = "0.20", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
-rocketjson_data = { version = "1.3.3", path = "../data" }
+rocketjson_data = { version = "2.0.0", path = "../data" }
+darling = "0.21.3"
